# sistemas-distribuidos_monorep

./: README.md  pyproject.toml
Trab-1/: README.md  docker-compose.yml  requirements.txt
Trab-1/ms_notificacao/: Dockerfile  pyproject.toml
hello_world/: Dockerfile  crypto.py  pyproject.toml
hello_world/keys/private/: duds.pem  torts.pem
hello_world/keys/public/: duds.pem  torts.pem
leiloes_rmq/: README.md  docker-compose.yml  fila_builder.py  pyproject.toml  terminal_logger.py
leiloes_rmq/client/: Dockerfile  client.py  client_manager.py  pyproject.toml
leiloes_rmq/cliente/: README.md  client_manager.py  client_manager_2.py  cliente.py  pyproject.toml
leiloes_rmq/models/: contants.py
leiloes_rmq/ms_lance/: bid.py  bid_manager.py  lance.py  lance_manager.py  pyproject.toml
leiloes_rmq/ms_leilao/: auction.py  auction_manager.py  build_leilao.py  init_auctions.py  leilao.py  leilao_manager.py  pyproject.toml
leiloes_rmq/ms_notificacao/: notification.py  notification_manager.py
pyro/: README.md  main.py  main_2.py  pyproject.toml  pyro.py  pyro_object.py
